# monarch

./: .gitignore.in  LICENSE  LICENSE.txt  Makefile.in  README  autogen.sh  build-setup  build.mk  build.xml  configure.ac  configure.in  configure.java.in  dbcore-run.in  dbcore-valgrind  dbcore.pc.in  dbcore.supp  index.html  monarch-run.in  monarch-valgrind  monarch3.pc.in  winbuild.mk
app/cpp/: Makefile.in
autoupdater/java/: build.xml
common/java/: build.xml
compress/cpp/: Makefile.in
config/cpp/: Makefile.in
configs/apps/: js.config.in  pong.config.in  rdfa2jsonld.config.in  test.config.in
cpp/app/: App.cpp  App.h  AppConfig.cpp  AppConfig.h  AppFactory.cpp  AppFactory.h  AppPlugin.cpp  AppPlugin.h  AppPluginFactory.cpp  AppPluginFactory.h  AppRunner.cpp  AppRunner.h  AppTools.cpp  AppTools.h  CmdLineParser.cpp  CmdLineParser.h  CommonAppPlugin.cpp  CommonAppPlugin.h  ConfigPlugin.cpp  ConfigPlugin.h  DummyAppPlugin.cpp  DummyAppPlugin.h  KernelPlugin.cpp  KernelPlugin.h  LoggingPlugin.cpp  LoggingPlugin.h  Makefile.in  MonarchPlugin.cpp  MonarchPlugin.h  MultiAppPlugin.cpp  MultiAppPlugin.h
cpp/compress/: Makefile.in
cpp/config/: ConfigChangeListener.h  ConfigManager.cpp  ConfigManager.h  Makefile.in
cpp/crypto/: AbstractBlockCipher.cpp  AbstractBlockCipher.h  AsymmetricKey.cpp  AsymmetricKey.h  AsymmetricKeyFactory.cpp  AsymmetricKeyFactory.h  BigDecimal.cpp  BigDecimal.h  BigInteger.cpp  BigInteger.h  BlockCipher.cpp  BlockCipher.h  BlockCipherInputStream.cpp  BlockCipherInputStream.h  CryptoHashAlgorithm.cpp  CryptoHashAlgorithm.h  DefaultBlockCipher.cpp  DefaultBlockCipher.h  DigitalEnvelope.cpp  DigitalEnvelope.h  DigitalSignature.cpp  DigitalSignature.h  DigitalSignatureInputStream.cpp  DigitalSignatureInputStream.h  DigitalSignatureOutputStream.cpp  DigitalSignatureOutputStream.h  HMAC.cpp  HMAC.h  HashMac.cpp  HashMac.h  Makefile.in  MessageDigest.cpp  MessageDigest.h  PrivateKey.cpp  PrivateKey.h  PublicKey.cpp  PublicKey.h  SymmetricKey.cpp  SymmetricKey.h  SymmetricKeyFactory.cpp  (+3 more)
cpp/data/: AbstractDataFormatInspector.cpp  AbstractDataFormatInspector.h  CharacterSetMutator.cpp  CharacterSetMutator.h  Data.h  DataFormatInspector.h  DataInspector.h  DynamicObjectInputStream.cpp  DynamicObjectInputStream.h  DynamicObjectOutputStream.cpp  DynamicObjectOutputStream.h  DynamicObjectReader.h  DynamicObjectWriter.h  InspectorInputStream.cpp  InspectorInputStream.h  Makefile.in  TemplateCache.cpp  TemplateCache.h  TemplateInputStream.cpp  TemplateInputStream.h
cpp/event/: Event.h  EventController.cpp  EventController.h  EventDaemon.cpp  EventDaemon.h  EventWaiter.cpp  EventWaiter.h  Makefile.in  Observable.cpp  Observable.h  Observer.h  ObserverDelegate.h  ObserverList.cpp  ObserverList.h
cpp/fiber/: Fiber.cpp  Fiber.h  FiberContext.cpp  FiberContext.h  FiberMessageCenter.cpp  FiberMessageCenter.h  FiberScheduler.cpp  FiberScheduler.h  Makefile.in  MessagableFiber.cpp  MessagableFiber.h  PortableUContext.cpp  PortableUContext386.h  PortableUContextPPC.h  WindowsSupport.cpp  WindowsSupport.h
cpp/http/: CookieJar.cpp  CookieJar.h  HttpBodyInputStream.cpp  HttpBodyInputStream.h  HttpBodyOutputStream.cpp  HttpBodyOutputStream.h  HttpChunkedTransferInputStream.cpp  HttpChunkedTransferInputStream.h  HttpChunkedTransferOutputStream.cpp  HttpChunkedTransferOutputStream.h  HttpClient.cpp  HttpClient.h  HttpConnection.cpp  HttpConnection.h  HttpConnectionMonitor.cpp  HttpConnectionMonitor.h  HttpConnectionPool.cpp  HttpConnectionPool.h  HttpConnectionServicer.cpp  HttpConnectionServicer.h  HttpHeader.cpp  HttpHeader.h  HttpPathRewriter.cpp  HttpPathRewriter.h  HttpRequest.cpp  HttpRequest.h  HttpRequestHeader.cpp  HttpRequestHeader.h  HttpRequestModifier.cpp  HttpRequestModifier.h  HttpRequestServicer.cpp  HttpRequestServicer.h  HttpRequestState.cpp  HttpRequestState.h  HttpResponse.cpp  HttpResponse.h  HttpResponseHeader.cpp  HttpResponseHeader.h  HttpTrailer.cpp  HttpTrailer.h  (+1 more)
cpp/io/: BitStream.cpp  BitStream.h  BufferedOutputStream.cpp  BufferedOutputStream.h  ByteArrayInputStream.cpp  ByteArrayInputStream.h  ByteArrayOutputStream.cpp  ByteArrayOutputStream.h  ByteBuffer.cpp  ByteBuffer.h  File.cpp  File.h  FileFunctions.h  FileInputStream.cpp  FileInputStream.h  FileList.h  FileOutputStream.cpp  FileOutputStream.h  FilterInputStream.cpp  FilterInputStream.h  FilterOutputStream.cpp  FilterOutputStream.h  IOEventDelegate.h  IOException.cpp  IOException.h  IOMonitor.cpp  IOMonitor.h  IOWatcher.h  IgnoreOutputStream.cpp  IgnoreOutputStream.h  InputStream.cpp  InputStream.h  Makefile.in  MutationAlgorithm.h  MutatorInputStream.cpp  MutatorInputStream.h  MutatorOutputStream.cpp  MutatorOutputStream.h  NullOutputStream.h  OStreamOutputStream.cpp  (+7 more)
cpp/kernel/: Makefile.in  MicroKernel.cpp  MicroKernel.h  MicroKernelModule.cpp  MicroKernelModule.h  MicroKernelModuleApi.h
cpp/logging/: Category.cpp  Category.h  FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h  LoggingCategories.cpp  LoggingCategories.h  Makefile.in  OutputStreamLogger.cpp  OutputStreamLogger.h
cpp/mail/: Mail.cpp  Mail.h  MailSpool.cpp  MailSpool.h  MailTemplateParser.cpp  MailTemplateParser.h  Makefile.in  SmtpClient.cpp  SmtpClient.h
cpp/modest/: Engine.cpp  Engine.h  ImmutableState.h  Kernel.cpp  Kernel.h  Makefile.in  Module.h  ModuleInterface.h  ModuleLibrary.cpp  ModuleLibrary.h  ModuleLoader.cpp  ModuleLoader.h  Operation.cpp  Operation.h  OperationDispatcher.cpp  OperationDispatcher.h  OperationGuard.h  OperationGuardChain.cpp  OperationGuardChain.h  OperationImpl.cpp  OperationImpl.h  OperationList.cpp  OperationList.h  OperationRunner.h  State.cpp  State.h  StateMutator.h  StateMutatorChain.cpp  (+1 more)
obsolete/: build.mk  configure-java.in
setup/: Makefile.base.in  Makefile.linux.in  Makefile.macos.in  Makefile.mingw32.in  baserules.mk  build.properties.in  capfile.in  config.guess  config.sub  configure.ac  create_mono_project  docs.doxygen.in  monarch.mk  targets.xml
setup/m4/: as-compiler-flag.m4  mo-args.m4  mo-compiler.m4  mo-platform.m4  mo-util.m4
(+2292 files in other folders)
